# tcup

./: .gitmodules  README.md  pyproject.toml
.github/workflows/: pull-request.yaml
tcup/: __init__.py  numpyro.py  preprocess.py  priors.py  scale.py  stan.py  tcup.py  utils.py
tcup/stan/: __init__.py  model.py
tcup/stan/src/: ncup.stan  template.stan
tcup/stan_models/: ncup.stan  tcup.stan  tcup_F18.stan  tcup_F18reparam.stan  tcup_cauchy.stan  tcup_cauchy_scaled.stan  tcup_cauchy_truncated.stan  tcup_invgamma.stan  tcup_invgamma2.stan  tcup_invnu.stan  tcup_nu2.stan  tcup_nu2_heuristic.stan  tcup_nu2_principled.stan  tcup_nu2_scaled.stan  template.stan
tests/: conftest.py  test_numpyro.py  test_preprocess.py  test_scale.py  test_stan.py  test_tcup.py  test_utils.py
