[tool.poetry]
name = "tcup"
version = "0.3.0"
description = ""
authors = ["William Martin <30499074+wm1995@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arviz = "^0.14.0"
tensorflow-probability = {extras = ["jax"], version = "^0.19.0"}
xdgmm = {git = "https://github.com/tholoien/XDGMM.git"}
jinja2 = "^3.1.2"

[tool.poetry.group.numpyro.dependencies]
numpyro = "^0.10.1"

[tool.poetry.group.pystan.dependencies]
httpstan = "^4.9.0"
pystan = "^3.6.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
