[tool.poetry]
name = "tcup"
version = "0.6.0"
description = ""
authors = ["William Martin <30499074+wm1995@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arviz = "^0.19.0"
jax = "^0.4.23"
numpy = "^1.26.3"
tensorflow-probability = {extras = ["jax"], version = "^0.19.0"}
xdgmm = {git = "https://github.com/tholoien/XDGMM.git"}

[tool.poetry.group.numpyro.dependencies]
numpyro = "^0.13.2"

[tool.poetry.group.pystan.dependencies]
jinja2 = "^3.1.2"
pystan = "^3.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^7.2.0"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["B", "E", "F", "I", "W"]
ignore = ["B028"]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
