[tool.poetry]
name = "tcup"
version = "0.7.0"
description = ""
authors = ["William Martin <30499074+wm1995@users.noreply.github.com>"]
readme = "README.md"
packages = [
    {include = "tcup"},
    {include = "xdgmm", from = "XDGMM"},
]


[tool.poetry.dependencies]
python = "^3.10"
arviz = "^0.19.0"
jax = "^0.4.23"
numpy = "^1.26.3"
numpyro = "^0.13.2"
tensorflow-probability = {extras = ["jax"], version = "^0.19.0"}

# XDGMM dependencies
scikit-learn = "^1.5.1"
astroml = "^1.0.2.post1"
astropy = "^6.1.2"
astropy-iers-data = "^0.2024.7.22.0.34.13"
pyerfa = "^2.0.1.4"

# Stan dependencies
jinja2 = {version = "^3.1.2", optional = true}
pystan = {version = "^3.6.0", optional = true}

[tool.poetry.extras]
stan = ["jinja2", "pystan"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^7.2.0"
pre-commit = "^3.7.1"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["B", "E", "F", "I", "W"]
ignore = ["B028"]
fixable = ["ALL"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
